# DjVu3

./: Makefile.in  README-unixgui.txt  README.txt  configure  configure-unixgui  configure.unixgui
Doc/: ATTSourceCodeAgreement.html  AnnotationsandTextualInformation..html  ArrayBase.html  ArrayBaseT.html  Arrays.h.html  AssociativeMaps.html  BSByteStream.h.html  BSByteStream.html  BitContext.html  ByteStream.2.html  ByteStream.h.html  ByteStream.html  CompilingtheLibrarySystemsotherthanUnix.html  CompilingtheLibraryUnix.html  DArray.html  DEBUG1_MSG.html  DEBUG2_MSG.html  DEBUG3_MSG.html  DEBUG4_MSG.html  DEBUG_MAKE_INDENT.html  DEBUG_MSG.html  DEBUG_MSGF.html  DEBUG_MSGN.html  DEBUG_SET_LEVEL.html  DJVUEXTERNCAPI.10.html  DJVUEXTERNCAPI.2.html  DJVUEXTERNCAPI.3.html  DJVUEXTERNCAPI.4.html  DJVUEXTERNCAPI.5.html  DJVUEXTERNCAPI.6.html  DJVUEXTERNCAPI.7.html  DJVUEXTERNCAPI.8.html  DJVUEXTERNCAPI.9.html  DJVUEXTERNCAPI.html  DJVUVERSION.html  DJVUVERSION_ORIENTATION.html  DJVUVERSION_TOO_NEW.html  DJVUVERSION_TOO_OLD.html  DPArray.html  DataPool.h.html  (+159 more)
Samples/: README  djvufile.c  emerg01.djvu  emerg02.djvu  emerg03.djvu  emerg04.djvu  img11.iw4  zcoder01.djvu  zcoder02.djvu  zcoder03.djvu  zcoder04.djvu  zcoder05.djvu  zcoder06.djvu  zcoder07.djvu  zcoder08.djvu  zcoder09.djvu  zcoder10.djvu
config/: build-wrapper.c  cc-wrapper.sh  cc.sh  ccpic.sh  commands.sh  configure.sh  cothread.sh  cxx.sh  cxxpic.sh  dirs.sh  dlopen.sh  doc++clean.pl  functions.sh  iconv.sh  libpath.sh  make_shlib.sh  make_stlib.sh  mbstate.sh  mkdirp.sh  package.sh  parse_config.sh  pthread.sh  read_cache.sh  rpo.sh  sys.sh  write_cache.sh  write_reconfig.sh  write_status.sh
profiles/: languages.xml  message.conf  messages.xml
profiles/osi-messages/: djvutools-reference.xml  libdjvu++-Test.xml  libdjvu++.xml
profiles/osi/Chinese_PRC/: libdjvu++.xml  messages.xml
profiles/osi/de_DE/: libdjvu++.xml
profiles/osi/en/: djvutools-reference.xml  libdjvu++.xml  messages.xml  unixgui-shared.xml  unixgui-viewer.xml
profiles/osi/fr_FR/: libdjvu++.xml  messages.xml
profiles/osi/ja_JP/: libdjvu++.xml  messages.xml
pubtext/: DjVuMessages.dtd  DjVuOCR.dtd  DjVuXML-s.dtd
rules/: README.rules  commands  compile  depend  nroff  paths  versions
src/djvutools/: djvutools.dsw
src/djvutools/reference/: DjVuDumpHelper.cpp  DjVuDumpHelper.h  JpegLibrary.dsp  Makefile.depend++  Makefile.in  ReferenceLibrary.dsp  annotate.cpp  build.bat  bzz.cpp  bzz.dsp  c44.cpp  c44.dsp  cdjvu  cjb2.cpp  cjb2.dsp  cpaldjvu.cpp  cpaldjvu.dsp  csepdjvu.cpp  csepdjvu.dsp  d44.cpp  d44.dsp  ddjvu.cpp  ddjvu.dsp  ddjvuce.vcp  djthumb.cpp  djthumb.dsp  djvm.cpp  djvmcvt.cpp  djvmcvt.dsp  djvuannotate.dsp  djvudump.cpp  djvudump.dsp  djvuextract.cpp  djvuextract.dsp  djvumake.cpp  djvumake.dsp  djvuprintmeta.cpp  djvused.cpp  djvutoxml.cpp  djvutoxml.dsp  (+18 more)
src/djvutools/scripts/: README.txt  Read_Me_Win32.txt  build-gnu-gs.sh  pdftodjvu.pl  pdftodjvu.sh  pstodjvu.pl  pstodjvu.sh
src/include/: DjVu.h  DjVuVersion.h
src/libdjvu++/: ATTLICENSE  ATTLicense.cpp  ATTLicense.cpp.in  ATTLicense.h  ATTREADME  Arrays.cpp  Arrays.h  BSByteStream.cpp  BSByteStream.h  BSEncodeByteStream.cpp  ByteStream.cpp  ByteStream.h  DataPool.cpp  DataPool.h  DejaVuCodec.h  DejaVuDecoder.cpp  DjVmDir.cpp  DjVmDir.h  DjVmDir0.cpp  DjVmDir0.h  DjVmDoc.cpp  DjVmDoc.h  DjVmFile.cpp  DjVmFile.h  DjVuAnno.cpp  DjVuAnno.h  DjVuCodec.cpp  DjVuCodec.h  DjVuDocEditor.cpp  DjVuDocEditor.h  DjVuDocument.cpp  DjVuDocument.h  DjVuDumpHelper.cpp  DjVuDumpHelper.h  DjVuDynamic.cpp  DjVuDynamic.h  DjVuErrorList.cpp  DjVuErrorList.h  DjVuFile.cpp  DjVuFile.h  (+148 more)
src/libdjvu++/Test/: Makefile  Makefile.am  Makefile.depend  Makefile.depend++  Makefile.in  Makefile.in.old  TestArray.cpp  TestArray.exp  TestBitmap.cpp  TestBitmap.exp  TestException.cpp  TestException.exp  TestGOS.vcp  TestIFF.cpp  TestJB2.cpp  TestList.cpp  TestList.exp  TestMap.cpp  TestMap.exp  TestSmartPointer.cpp  TestSmartPointer.exp  TestString.cpp  TestString.exp  TestThreads.cpp  TestThreads.exp  message.conf  testgos.cpp  testgos.dsp  testgos.dsw
src/libdjvu++/c-wrappers/: DjVu.h  DjVuAPI.dxx  DjVuAPI.footer  DjVuAPI.h  DjVuBitonalAPI.h  DjVuDecodeAPI.h  DjVuDocumentAPI.h  DjVuMultiAPI.h  DjVuOCRAPI.h  DjVuOptions.h  DjVuPhotoAPI.h  DjVuPriv.h  DjVuTiffG4API.h  DjVuVersion.h  README  djvu_global.h  djvubitonal.h  djvutiffg4.h
src/unixgui/: maketr
src/unixgui/bin2cpp/: Makefile.in  bin2cpp.cpp
src/unixgui/djview/: Makefile.in  dispatch.cpp  dispatch.h  djvu_viewer.cpp  djvu_viewer.h  djvu_viewer_res.h  main.cpp  mime_check.cpp  mime_check.h  netscape.cpp  netscape.h  qd_mime_dialog.cpp  qd_mime_dialog.h  qd_viewer.cpp  qd_viewer.h  qd_viewer_menu.cpp  qd_viewer_menu.h  qd_viewer_prefs.cpp  qd_viewer_prefs.h  qd_viewer_shell.cpp  qd_viewer_shell.h
src/unixgui/indep/QT/: qlib.cpp  qlib.h  qt_color_dialog.cpp  qt_color_dialog.h  qt_color_menu.cpp  qt_color_menu.h  qt_fix.cpp  qt_fix.h  qt_imager.cpp  qt_imager.h  qt_iscale.cpp  qt_iscale.h  qt_n_in_one.cpp  qt_n_in_one.h  qt_painter.cpp  qt_painter.h  qt_pnote.cpp  qt_pnote.h
src/unixgui/indep/QX/: qx_imager.cpp  qx_imager.h  qx_pnote.cpp  qx_pnote.h  qxlib.cpp  qxlib.h  rem_netscape.cpp  rem_netscape.h
src/unixgui/indep/except/: exc_base.cpp  exc_base.h  exc_file.cpp  exc_file.h  exc_misc.cpp  exc_misc.h  exc_msg.cpp  exc_msg.h  exc_range.cpp  exc_range.h  exc_res.cpp  exc_res.h  exc_sys.cpp  exc_sys.h  exceptions.cpp  exceptions.h  throw_error.cpp  throw_error.h
src/unixgui/indep/utils/: cin_data.cpp  cin_data.h  col_db.cpp  col_db.h  execdir.cpp  execdir.h  int_types.h
src/unixgui/npsdk/: Npwin.cpp  jri.h  jri_md.h  jritypes.h  npapi.h  npmac.cpp  npunix.c  npupp.h
src/unixgui/nsdejavu/: Makefile.in  plugin.cpp  plugin.h  stubs.cpp
src/unixgui/shared/QT/: EditorMapAreas.cpp  MapAreas.cpp  MapAreas.h  MapBorder.cpp  MapBorder.h  MapDraw.cpp  MapDraw.h  djvu_viewer.cpp  djvu_viewer.h  hand1.bm  hand1_mask.bm  hand2.bm  hand2_mask.bm  init_qt.cpp  init_qt.h  qd_align_dialog.cpp  qd_align_dialog.h  qd_base.cpp  qd_base.h  qd_editor.h  (+107 more)
(+40 files in other folders)
