lib_LIBRARIES  = mg3_zp_lib.a


# --------------- Public I files (directory location of required .h files)

INCLUDES       = $(LT_INCLUDE) $(MG3_INCLUDE) 

mg3_zp_lib_a_SOURCES = \
Arrays.cpp\
DjVuGlobalMemory.cpp\
GScaler.cpp\
BSByteStream.cpp\
DjVuImage.cpp\
GSmartPointer.cpp \
ByteStream.cpp\
DjVuInfo.cpp\
GString.cpp\
DataPool.cpp\
DjVuNavDir.cpp\
GThreads.cpp\
DjVmDir.cpp\
DjVuPalette.cpp\
GURL.cpp\
DjVmDir0.cpp\
DjVuPort.cpp\
IFFByteStream.cpp\
DjVmDoc.cpp\
IWImage.cpp\
DjVuAnno.cpp\
GBitmap.cpp\
IWTransform.cpp\
DjVuDocEditor.cpp \
GContainer.cpp\
JB2Image.cpp\
DjVuDocument.cpp\
GException.cpp\
JPEGDecoder.cpp\
DjVuDumpHelper.cpp\
GIFFManager.cpp\
MMRDecoder.cpp\
DjVuErrorList.cpp\
GMapAreas.cpp\
DjVuFile.cpp\
GOS.cpp	\
ZPCodec.cpp\
DjVuFileCache.cpp\
GPixmap.cpp\
DjVuGlobal.cpp\
GRect.cpp		